--- a/scoring_voice.ipynb
+++ b/scoring_voice.ipynb
@@ -6,7 +6,7 @@
       "name": "scoring_voice.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMam+mI7qkOnZVsbYIOUgka",
+      "authorship_tag": "ABX9TyPkALGTScdPuiD8LRnp73+B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,7 +240,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# English scoring:"
+        "# English scoring: 65.57 %"
       ],
       "metadata": {
         "id": "XbuxNu2y2Jfk"
@@ -324,7 +324,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Ca scoring:"
+        "# Ca scoring: 58.28 %"
       ],
       "metadata": {
         "id": "SKsWZl3Q3Uge"
@@ -408,7 +408,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Fr scoring:\n"
+        "# Fr scoring: 40.34 %\n"
       ],
       "metadata": {
         "id": "nJic8ILr4Rlx"
@@ -493,7 +493,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Eu scoring:"
+        "# Eu scoring: 75.68 %"
       ],
       "metadata": {
         "id": "r-plVZfM9m6a"
@@ -575,7 +575,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# zh scoring:"
+        "# zh scoring: 60.07 %"
       ],
       "metadata": {
         "id": "Ul_PoXqJ-LUR"
@@ -659,7 +659,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Es scoring:"
+        "# Es scoring: 64.66 %"
       ],
       "metadata": {
         "id": "byq09BmYH-oR"
@@ -742,7 +742,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# De scoring:"
+        "# De scoring: 46.45 %"
       ],
       "metadata": {
         "id": "OzENnxOxIGTH"
